# Pyxis-CodeCanvas

./: .env.example  .gitignore  .npmrc  .prettierrc  CLAUDE.md  CODE_OF_CONDUCT.md  DATABASE.md  FreeAPIGenerativeAI-Model.md  GITIGNORE-BUG-FIX-REPORT.md  IMPLEMENTATION_SUMMARY.md  README-ARCHITECTURE-INVESTIGATION.md  README.md  README_en.md  README_ja.md  SHORT_README.md  SINGLE-LAYER-ANALYSIS.md  SINGLE-LAYER-PROPOSAL.md  SPECIFICATION.md  TODO.md  aiResponseTest.txt  aiSystem.md  bashCmd.txt  biome.json  build-extensions.js  build-react-shim.js  eslint.config.mjs  feature.txt  gemini-api-models-2025-10.txt  git-deletion-detection-analysis.md  helper-code.txt  i18n.sh  index.html  initial_files_to_ts.js  issue-222-report.txt  jest.config.cjs  jest.setup.js  memo  next.config.js  next.config.ts  package-lock.json  (+21 more)
.github/: copilot-instructions.md
Development/: BUILTIN_MODULE_REFACTORING.md  COMMAND-EXTENSION.md  DEVICE_FLOW_IMPLEMENTATION.md  EXTENSION-NPM-LIBRARIES.md  EXTENSION-SYSTEM.md  EXTENSION-TAB-SIDEBAR-API.md  EditorMemoryManager-PR-Evaluation.md  EditorMemoryManager-Usage-Guide.md  FILE_REPOSITORY_BEST_PRACTICES.md  GITHUB_PUSH_IMPLEMENTATION.md  MODULE-CACHE-STRATEGY.md  MULTI-FILE-EXTENSION-SUPPORT.md  NEW-ARCHITECTURE.md  NodeJSRuntime-new-arc.md  PAT-AUTH-IMPLEMENTATION.md  PROJECT-ID-BEST-PRACTICES.md  SECURITY_IMPROVEMENTS.md  SHELL-PARSER-PLAN.md  TAB-MANAGEMENT-ARCHITECTURE.md  TODO.md  Tauri-Setup.md  ai-agent-implementation-plan.md  (+5 more)
src/: env.ts  (+5 more)
swc_async_require_plugin/: .gitignore  Cargo.toml  README.md
swc_async_require_plugin/src/: lib.rs
(+1048 files in other folders)
