[package]
name = "swc_async_require_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use a more recent swc_core that matches common swc_common versions on CI
swc_core = { version = "0.93.0", features = ["ecma_plugin_transform", "plugin-runtime"] }
wasm-bindgen = "0.2.90"
