[package]
name = "swc_async_require_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use a more recent swc_core that matches common swc_common versions on CI
swc_core = { version = "0.93.4", features = ["ecma_plugin_transform"] }
wasm-bindgen = "0.2.90"
serde = { version = "1.0.140", features = ["derive"] }

[patch.crates-io]
# Force serde to a version compatible with swc_common's expected internal layout
serde = { version = "1.0.140", package = "serde" }
